fix overlap of carousel

--- a/stylesheet/styleg11.css
+++ b/stylesheet/styleg11.css
@@ -1,3 +1,7 @@
+.header {
+  margin:100px;
+  z-index: 2;
+}
 #flowers {
 	width:auto;
 	height:550px;
@@ -10,7 +14,8 @@
 	margin:10px;}
 .scroll {
 	width:auto;
-	margin-top:120px;
+  margin-top:120px;
+  position:static;
 	overflow:auto;}
 .boxwhite {
 	overflow:auto;
@@ -38,6 +43,7 @@
   box-shadow: 2px 2px 10px #ccc;
   overflow: hidden;
   margin:0 auto;
+  background:#DDD;
 }
 .content {
   margin: 0;
@@ -92,6 +98,7 @@
   border: 1px solid #ccc;
   box-shadow: 2px 2px 10px #ccc;
   overflow: hidden;
+  background-color:white;
 }
 .content {
   margin: 0;
@@ -139,6 +146,7 @@
   box-shadow: 2px 2px 10px #ccc;
   overflow: hidden;
   margin:0 auto;
+  background-color:#DDD;
 }
 .content {
   margin: 0;
@@ -166,7 +174,7 @@
   padding: 5px 0;
   background: #eee;
   text-align: center;
-  z-index: 10;
+  z-index: 1;
   position: relative;
 }
 .carouselbox3 button {
@@ -178,3 +186,4 @@
 } 
 .prev {margin:0px 10px 0px 10px;}
 .next {margin:0px 10px 0px 10px;}
+.space {height: 100px;}
